--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,17 +1,22 @@
 {
-    "registries": [
-      {
-        "kind": "git",
-        "repository": "https://gitlab.com/colorglass/vcpkg-colorglass",
-        "baseline": "6309841a1ce770409708a67a9ba5c26c537d2937",
-        "packages": [
-          "articuno",
-          "bethesda-skyrim-scripts",
-          "commonlibsse-ng",
-          "gluino",
-          "script-extender-common",
-          "skse"
-        ]
-      }
-    ]
+  "default-registry": {
+    "kind": "git",
+    "repository": "https://github.com/microsoft/vcpkg",
+    "baseline": "f6a5d4e8eb7476b8d7fc12a56dff300c1c986131"
+  },
+  "registries": [
+    {
+      "kind": "git",
+      "repository": "https://gitlab.com/colorglass/vcpkg-colorglass",
+      "baseline": "6309841a1ce770409708a67a9ba5c26c537d2937",
+      "packages": [
+        "articuno",
+        "bethesda-skyrim-scripts",
+        "commonlibsse-ng",
+        "gluino",
+        "script-extender-common",
+        "skse"
+      ]
+    }
+  ]
 }
